[gd_scene load_steps=8 format=3 uid="uid://c5l074er5jpcg"]

[ext_resource type="Script" path="res://Scenes/Desktop/file_entry_icon.gd" id="1_bn2mg"]
[ext_resource type="Texture2D" uid="uid://bl5se111ushyf" path="res://Assets/Sprites/16x16 RPG Item Pack/Item__00.png" id="2_bwv8u"]
[ext_resource type="Theme" uid="uid://btb0t5a2pv8m5" path="res://Assets/Themes/PixelText.tres" id="3_vquub"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7w8x"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.6408, 0.769553, 0.89, 0.588235)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6408, 0.769553, 0.89, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 5
shadow_color = Color(0.82, 0.82, 0.82, 0.196078)
anti_aliasing = false

[sub_resource type="Theme" id="Theme_fm167"]
Panel/styles/panel = SubResource("StyleBoxFlat_o7w8x")

[sub_resource type="LabelSettings" id="LabelSettings_sxei6"]
line_spacing = -8.0
font_size = 32
shadow_color = Color(0, 0, 0, 0.980392)
shadow_offset = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fl4lc"]
size = Vector2(139, 168)

[node name="FileEntryIcon" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bn2mg")

[node name="DragBoundary" type="Control" parent="."]
anchors_preset = 0
offset_left = -59.0
offset_top = -43.0
offset_right = 60.0
offset_bottom = 105.0

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -69.0
offset_top = -53.0
offset_right = 70.0
offset_bottom = 115.0
mouse_filter = 2
theme = SubResource("Theme_fm167")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_bwv8u")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -34.0
offset_top = 36.0
offset_right = 35.0
offset_bottom = 84.0
theme = ExtResource("3_vquub")
theme_override_font_sizes/font_size = 32
text = "PLACEHOLDER placeholder"
label_settings = SubResource("LabelSettings_sxei6")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 31)
shape = SubResource("RectangleShape2D_fl4lc")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
